2003-07-18  Kazu Hirata  <kazu@cs.umass.edu>

	* combine.c (simplify_comparison): Don't share rtx when converting 
	(ne (and (not X) 1) 0) to (eq (and X 1) 0).

2003-07-18  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/aix.h (AGGREGATE_PADDING_FIXED): Define.
	(AGGREGATES_PAD_UPWARD_ALWAYS): Define.
	(MUST_PASS_IN_STACK): Define.
	(BLOCK_REG_PADDING): Define.

2003-07-18  Richard Henderson  <rth@redhat.com>

	* cfgrtl.c (force_nonfallthru_and_redirect): Use tablejump_p
	to skip the addr_vec.

Fri Jul 18 15:22:28 2003  Alexandre Oliva  <aoliva@redhat.com>

	* combine.c (combinable_i3pat): Don't forbid occurrences of
	i2dest or i1dest in inner_dest if inner_dest is a mem.

Fri Jul 18 17:05:57 CEST 2003  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (cgraph_remove_node): Clear the hash table slot.

2003-07-17  Jakub Jelinek  <jakub@redhat.com>

	PR target/11087
	* loop.c (basic_induction_var): Check if convert_modes emitted any
	instructions. Remove them and return 0 if so.

2003-07-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/11083
	* toplev.c (rest_of_handle_addresof): Rename into
	rest_of_handle_addressof.  Delete unreachable blocks
	if dead edges were purged after the addressof pass.

2003-07-18  Neil Booth  <neil@daikokuya.co.uk>

	* Makefile.in, configure, configure.in: Remove handling of
	lang-options.h and options_.h.
	* toplev.c (struct lang_opt, documented_lang_options): Remove.
	(display_help): Don't use documented_lang_options.

2003-07-17  Zack Weinberg  <zack@codesourcery.com>

	* c-decl.c (pushdecl_function_level): Make static, return nothing.
	(kept_level_p): Fold into poplevel.
	(undeclared_variable): Moved here from c-typeck.c.  Export.
	* c-tree.h (KEEP_YES, KEEP_NO, KEEP_MAYBE): New #defines.
	(undeclared_variable): Prototype here.  Don't prototype
	kept_level_p nor pushdecl_function_level.
	* c-parse.in: Change first argument to poplevel from
	"kept_level_p()" to "KEEP_MAYBE".